# The-Trader-Was-Replaced

./: .gitignore  CONTEXT.md  Cargo.toml  README.md  build.rs  pyproject.toml
.claude/skills/bevy-engine/bevscode/: .gitattributes  .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.claude/skills/bevy-engine/bevscode/.cargo/: config.toml
.claude/skills/bevy-engine/bevscode/.github/workflows/: ci.yml
.claude/skills/bevy-engine/bevscode/crates/bevscode/: Cargo.toml  (+1 more)
.claude/skills/bevy-engine/bevscode/examples/: Cargo.toml  editor.rs  editor_lsp.rs  editor_multi.rs  editor_perf.rs  editor_perf_screenshot.rs  editor_syntax.rs  terminal.rs  terminal_editor.rs  text_input.rs
python/: README.md  pyproject.toml
python/data/: sample_replay.csv
python/engine/: __main__.py  _backend_impl.py  _proto_compat.py  backend_service.py  core.py  inproc_server.py  jquants_loader.py  jquants_to_catalog.py  mode_manager.py  models.py  nautilus_adapter.py  nautilus_backtest_runner.py  nautilus_catalog_loader.py  nautilus_runner.py  paths.py  process_lifecycle.py  reducer.py  replay.py  server_grpc.py
python/engine/exchanges/: kabusapi.py  kabusapi_auth.py  kabusapi_orders.py  kabusapi_register.py  kabusapi_url.py  kabusapi_ws.py  tachibana.py  tachibana_auth.py  tachibana_file_store.py  tachibana_login_flow.py  tachibana_master.py  tachibana_orders.py  tachibana_url.py  tachibana_ws.py
python/engine/live/: account_sync.py  adapter.py  aggregator.py  backend_event_bus.py  bar_supply.py  depth_cache.py  engine_controller.py  event_bus.py  gui_bridge_actor.py  health_watchdog.py  idle_shutdown.py  instruments_scheduler.py  instruments_store.py  last_price_cache.py  live_adapter_factory.py  live_runner.py  logging.py  login_dialog_runner.py  mock_adapter.py  nautilus_exec_client.py  order_facade.py  order_types.py  reducer_bridge.py  run_registry.py  safety_rails.py  secret_provider.py  state_machine.py  strategy_host.py  strategy_registry.py  strategy_state_machine.py
python/engine/proto/: engine_pb2.py  engine_pb2_grpc.py
python/engine/strategy_replay/: cli.py
python/engine/strategy_runtime/: engine_runner.py  portfolio.py  run_buffer.py  scenario.py  strategy_loader.py  summary.py  universe.py
python/proto/: engine.proto
python/python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/tests/: conftest.py  test_account_sync_startup_log.py  test_backend_error_publish.py  test_core_observability.py  test_data_engine_integration.py  test_direct_vs_catalog_parity.py  test_engine.py  test_grpc_backend_events.py  test_grpc_catalog_route.py  test_grpc_control.py  test_grpc_health_filter.py  test_grpc_health_watchdog.py  test_grpc_list_all_listed_symbols.py  test_grpc_list_instruments.py  test_grpc_live_strategy.py  test_grpc_phase8.py  test_grpc_place_order.py  test_grpc_portfolio.py  test_grpc_shutdown.py  test_grpc_startup_sentinel.py  test_grpc_submit_secret.py  test_grpc_tachibana_secret.py  test_inproc_e2e.py  test_inproc_server.py  test_instrument_id_to_bar_type.py  test_jquants_loader.py  test_jquants_replay_provider.py  test_jquants_to_catalog.py  test_main_args.py  test_mode_manager.py  test_models.py  test_nautilus_adapter.py  test_nautilus_adapter_engine.py  test_nautilus_backtest_runner.py  test_nautilus_catalog_loader.py  test_nautilus_catalog_route.py  test_nautilus_runner.py  test_paths.py  test_phase3.py  test_phase5.py  (+3 more)
python/tests/data/: e2e_instruments_ref_locked.json  e2e_instruments_ref_locked.py  e2e_instruments_ref_mixed_locked.json  pair_trade_minute.json  pair_trade_minute.py  test_strategy_7203_daily.json  test_strategy_7203_daily.py  test_strategy_7203_minute.py  test_strategy_daily.json  test_strategy_daily.py  test_strategy_minute.py  test_strategy_trade.py
python/tests/data/refs/: universe_topix_core.json
python/tests/engine/: test_nautilus_catalog_loader_paths.py
python/tests/exchanges/: README_kabu_smoke.md  test_kabusapi_adapter.py  test_kabusapi_auth.py  test_kabusapi_exec.py  test_kabusapi_login_flow.py  test_kabusapi_login_form_state.py  test_kabusapi_orders.py  test_kabusapi_register.py  test_kabusapi_smoke.py  test_kabusapi_url.py  test_kabusapi_ws.py  test_kabusapi_ws_codec.py  test_tachibana_adapter.py  test_tachibana_auth.py  test_tachibana_codec.py  test_tachibana_file_store.py  test_tachibana_login_flow.py  test_tachibana_login_form_state.py  test_tachibana_master.py  test_tachibana_orders.py  test_tachibana_smoke.py  test_tachibana_url.py  test_tachibana_ws.py
python/tests/fixtures/strategies/: fake_buy_and_hold.json  fake_buy_and_hold.py  fake_market_buy_once.py
python/tests/live/: test_account_sync.py  test_account_sync_slice5.py  test_adapter.py  test_adapter_events.py  test_aggregator.py  test_backend_event_bus.py  test_build_mode.py  test_event_bus.py  test_health_watchdog.py  test_idle_shutdown.py  test_instrument_mapping.py  test_instruments_scheduler.py  test_instruments_store.py  test_last_price_cache.py  test_live_adapter_factory.py  test_live_bar_supply.py  test_live_data_client.py  test_live_runner.py  test_live_strategy_state_machine.py  test_logging.py  test_login_dialog_runner.py  test_mock_adapter.py  test_nautilus_live_exec.py  test_order_event_account_refetch.py  test_order_facade.py  test_reducer_bridge.py  test_register_live_strategy_error_message.py  test_run_registry.py  test_safety_rails.py  test_secret_masking_phase9.py  test_secret_provider.py  test_secret_vault.py  test_state_machine.py  test_strategy_host.py  test_strategy_log.py
python/tests/replay/: test_get_state_depth_only_a0.py  test_last_prices_replay_mode.py  test_multi_instrument_replay.py  test_per_instrument_a0.py
python/tests/strategy_runtime/: conftest.py  test_blacksheep_ingest_compat.py  test_catalog_data_loader.py  test_cli.py  test_engine_runner.py  test_fake_strategy_e2e.py  test_order_flow_06_smoke.py  test_run_buffer_schema.py  test_scenario_extract.py  test_strategy_loader.py  test_summary.py  test_universe.py  test_warmup.py
python/tests/strategy_runtime/fixtures/: universe_1301_jan0610.json
(+598 files in other folders)
