[package]
name = "backcast"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18", features = ["default", "bevy_picking", "sprite_picking", "debug"] }
bevy_pancam = "0.20"
bevy_vector_shapes = "0.12"
rand = "0.8"
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.17.2"
dirs = "6.0.0"
bevy_cosmic_edit = "0.26"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
undo = "0.52"
chrono = "0.4"
url = "2"
regex = "1"
wait-timeout = "0.2"
zeroize = "1"

[dev-dependencies]
serial_test = "3.1"
tempfile = "3"
tokio-stream = "0.1"
# headless テストで CosmicFontSystem(FontSystem) を手構築するための直接参照
# （bevy_cosmic_edit の transitive 依存と同版に固定）
cosmic-text = "0.16"

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3.0"

[patch.crates-io]
bevy_cosmic_edit = { path = "crates/bevy_cosmic_edit" }

# dev ビルドの実行時パフォーマンス対策（Bevy 公式推奨）。
# 自分のクレートは opt-level=1 に留めてインクリメンタルコンパイルを速く保ちつつ、
# 依存（Bevy / bevy_cosmic_edit / cosmic_text 等）だけ opt-level=3 で最適化する。
# 「debug ビルドが重くて使えない」問題に対する単一で最大の効果。初回のみ依存の
# 再コンパイルで時間がかかるが、以降の自コード変更のビルドは速いまま。
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
