[package]
name = "backcast"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18", features = ["default", "bevy_picking", "sprite_picking", "debug", "serialize"] }
bevy_pancam = "0.20"
bevy_vector_shapes = "0.12"
rand = "0.8"
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.17.2"
dirs = "6.0.0"
# issue #50 — bevscode を導入（Projected Node 方式で cosmic_edit を全面置換済み）。
# crates.io には未公開。Phase B 完了時に rev を pin する。
bevscode = { git = "https://github.com/PoHsuanLai/bevscode.git", default-features = false }
# bevscode の transitive 依存だが、projection system で `.before(LayoutProduceSet)` の
# 制約に SystemSet を引くため直接依存にする（bevscode と同じ git rev = 51220b7 に固定）。
bevy_instanced_text = { git = "https://github.com/PoHsuanLai/bevy_instanced_text.git", rev = "51220b7", default-features = false }
# tree-sitter 系: bevscode と同じ git repo 内の crate を使う（rev は不固定で bevscode に合わせる）。
# lang-python feature で `arborium::lang_python` への re-export を有効化し、Strategy Editor の
# Python シンタックスハイライトを bevscode の SetLanguageRequested で流す。
bevy_tree_sitter = { git = "https://github.com/PoHsuanLai/bevscode.git", features = ["lang-python"] }
undo = "0.52"
chrono = "0.4"
url = "2"
regex = "1"
wait-timeout = "0.2"
zeroize = "1"
pyo3 = { version = "0.22", features = ["auto-initialize"] }

[dev-dependencies]
# `debug` feature を有効化すると `ScheduleSystem::name()` が実際の関数名を返す（M20 で必要）。
# 本番 `[dependencies]` には付けず test ビルドでのみ有効化する。
bevy = { version = "0.18", features = ["debug"] }
serial_test = "3.1"
tempfile = "3"
tokio-stream = "0.1"
# j3 / j4 が bevscode の compute_newline_indent / Rope ベースの helpers を直接呼ぶための直接参照
# （bevscode 経由で transitive に入っているのと同じバージョンを使う）。
ropey = "1"

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3.0"

# dev ビルドの実行時パフォーマンス対策（Bevy 公式推奨）。
# 自分のクレートは opt-level=1 に留めてインクリメンタルコンパイルを速く保ちつつ、
# 依存（Bevy / bevscode / bevy_instanced_text 等）だけ opt-level=3 で最適化する。
# 「debug ビルドが重くて使えない」問題に対する単一で最大の効果。初回のみ依存の
# 再コンパイルで時間がかかるが、以降の自コード変更のビルドは速いまま。
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
