[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["python"]

[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "python/README.md"
requires-python = ">=3.13"
dependencies = [
    "grpcio>=1.80.0",
    "grpcio-tools>=1.80.0",
    "nautilus-trader>=1.226.0",
    "orjson>=3.11.9",
    "pydantic>=2.13.4",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-httpx>=0.36.2",
    "pytest-timeout>=2.3",
    "freezegun>=1.5.5",
]

[tool.pytest.ini_options]
pythonpath = ["python", "."]
testpaths = ["python/tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests that do full real-data scans (deselect with '-m not slow')",
]
