[package]
name = "bevy_lsp"
version = "0.1.1"
edition = "2021"
authors = ["PoHsuanLai"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Per-entity Language Server Protocol transport for Bevy: async-lsp over Bevy's smol-based task pool, request/response routing, server-capability querying, per-document URI/version tracking. Just the protocol — UI state (popups, completion filtering, debouncing) lives in the consumer."
repository = "https://github.com/PoHsuanLai/bevscode"
keywords = ["bevy", "lsp", "language-server"]
categories = ["game-development", "development-tools"]

[dependencies]
bevy_app = { workspace = true }
bevy_ecs = { workspace = true }
bevy_log = { workspace = true }
bevy_tasks = { workspace = true }

async-lsp = { version = "0.2", default-features = false, features = ["tracing"] }
async-channel = "2"
futures = { version = "0.3", default-features = false, features = ["std"] }
tower = "0.4"

lsp-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

ropey = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-process = "2"
async-lsp = { version = "0.2", default-features = false, features = ["client-monitor", "tracing", "stdio"] }
piper = { version = "0.2", optional = true }


[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = { version = "0.6", default-features = false, features = ["websocket"] }
wasm-bindgen-futures = "0.4"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = []
# In-process fake LSP server + FakeTransport for headless integration tests.
# Pulls in piper for the duplex byte streams; native-only.
test-support = ["dep:piper"]
